--- a/style.css
+++ b/style.css
@@ -17,3 +17,26 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.pacman {
+    width: 50px;
+    height: 50px;
+
+    background: #fff000;
+    position: relative;
+    margin-top: 20px;
+}
+
+.pacman__eye {
+    width: 8px;
+    height: 8px;
+    background: #333;
+    position: absolute;
+    right: 13px;
+    top: 10px;
+}
+
+.pacman,
+.pacman__eye {
+    border-radius: 50%;
+}
