--- a/style.css
+++ b/style.css
@@ -32,8 +32,16 @@ body {
     height: 8px;
     background: #333;
     position: absolute;
-    right: 13px;
-    top: 10px;
+    right: 20px;
+    top: 8px;
+}
+
+.pacman__mouth {
+    background: #000;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    clip-path: polygon(100% 74%, 44% 48%, 100% 25%);
 }
 
 .pacman,
