--- a/style.css
+++ b/style.css
@@ -50,6 +50,17 @@ body {
     border-radius: 50%;
 }
 
+.pacman__food {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 50%;
+    top: 40%;
+    left: 120px;
+    animation: 0.5s food ease-in-out infinite;
+}
+
 @keyframes eat {
     0% {
         clip-path: polygon(100% 74%, 44% 48%, 100% 25%);
@@ -65,5 +76,17 @@ body {
     }
     100% {
         clip-path: polygon(100% 74%, 44% 48%, 100% 25%);
+    }
+}
+
+@keyframes food {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(-100px);
+        opacity: 0;
     }
 }
